--- a/index.html
+++ b/index.html
@@ -918,7 +918,7 @@
     <nav id="navbar">
         <div class="container nav-container">
             <a href="#home" class="logo">
-                <img src="images/logo.PNG" alt="logo">
+                <img src="images/logo.png" alt="logo">
                 Larkin Langston
             </a>
             <div class="nav-links">
